try fix the products overflow for small phones

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -72,7 +72,7 @@ body {
 .header {
   position: absolute;
   width: 100%;
-  height: 16;
+  height: 10rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -80,14 +80,13 @@ body {
   padding: 1rem;
   box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.25);
   background-color: var(--primary-light);
+  z-index: 100;
 }
 .header__logo {
-  padding: 1rem 1.5rem;
-  border-radius: 50px;
   height: 100%;
 }
 .header__logo-img {
-  width: 100%;
+  height: 100%;
 }
 
 .navbar {
@@ -273,7 +272,7 @@ body {
 }
 
 .categories-container {
-  padding-top: 16.5rem;
+  padding-top: 10rem;
   height: 90vh;
   background-image: url("../assets/background/pink-circles.svg");
   display: flex;
@@ -296,6 +295,12 @@ body {
 .category {
   transition: all 0.3s ease-in;
 }
+@media only screen and (max-width: 25em) {
+  .category {
+    width: 150px;
+    height: 180px;
+  }
+}
 @media only screen and (min-width: 48em) {
   .category {
     width: 300px;
@@ -303,7 +308,7 @@ body {
   }
 }
 .category:first-of-type {
-  transform: rotateZ(-5deg) translate(-20px, 10px);
+  transform: rotateZ(-5deg) translate(-20px, 0px);
 }
 @media only screen and (min-width: 37.5em) {
   .category:first-of-type {
@@ -321,7 +326,7 @@ body {
   }
 }
 .category:last-of-type {
-  transform: rotateZ(8deg) translate(20px, -10px);
+  transform: rotateZ(8deg) translate(35px, -40px);
 }
 @media only screen and (min-width: 37.5em) {
   .category:last-of-type {
