--- a/src/sass/pages/products.scss
+++ b/src/sass/pages/products.scss
@@ -1,5 +1,5 @@
 .categories-container {
-  padding-top: 16.5rem;
+  padding-top: 10rem;
   height: 90vh;
   background-image: url('../assets/background/pink-circles.svg');
   display: flex;
@@ -20,13 +20,18 @@
 .category {
   @extend .polaroid;
 
+  @include device(sm-phone) {
+    width: 150px;
+    height: 180px;
+  }
+
   @include device(tablet-land) {
     width: 300px;
     height: 360px;
   }
 
   &:first-of-type {
-    transform: rotateZ(-5deg) translate(-20px, 10px);
+    transform: rotateZ(-5deg) translate(-20px, 0px);
 
     @include device(tablet-port) {
       transform: rotateZ(-25deg) translate(-20px, 10px);
@@ -41,7 +46,7 @@
   }
 
   &:last-of-type {
-    transform: rotateZ(8deg) translate(20px, -10px);
+    transform: rotateZ(8deg) translate(35px, -40px);
     @include device(tablet-port) {
       transform: rotateZ(15deg) translate(-10px, -50px);
     }
